# miniRT

./: .gitignore  2spheres.rt  CMakeLists.txt  Makefile  README.md  example_data_structure.h  main.c  makefile.mak  makefile.nix  makefile.nix1  minirt.h  plane.rt  test.rt  test1.rt  test2.rt  test3.rt  tracer.c
fdf/: Makefile  fdf  fdf.h  fdf_bonus.h
fdf/bonus/: draw_bonus.c  draw_utils_bonus.c  init_bonus.c  listen_bonus.c  listen_utils_bonus.c  main_bonus.c  project_bonus.c  read_bonus.c  read_utils_bonus.c  terminate_bonus.c
fdf/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
fdf/libft/: ft_atoi.c  ft_lstadd_back.c  ft_split.c
fdf/src/: draw.c  draw_utils.c  init.c  listen.c  listen_utils.c  main.c  project.c  read.c  read_utils.c  terminate.c
fdf_anton/: color_utils.c  fdf  fdf.h  geometry.c  get_next_line.c  hooks.c  image_utils.c  main.c  makefile  pre_process.c  utils.c
fdf_anton/libft/: ft_isprint.c  ft_lstadd_back.c  ft_lstiter.c  ft_lstnew.c  ft_memchr.c  ft_memmove.c  ft_putnbr_fd.c  ft_split.c  ft_strchr.c  ft_strlcpy.c  ft_strncmp.c  libft.h
includes/: key.h  minirt.h  minirt_bonus.h
includes_mac/: get_next_line.h  key.h  minirt.h  minirt_bonus.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_itoa.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstlast.c  ft_lstmap.c  ft_lstsize.c  ft_memccpy.c  ft_memcmp.c  ft_memcpy.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmapi.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c
minilibx-lin/test/: mlx-test
rt_files/: cylinder.rt  error.rt  sphere.rt  test2.rt  test3_bonus.rt  test4.rt
srcs/: color_utils.c  cylinder_cap_utils.c  cylinder_utils.c  diffuse_light_check.c  diffuse_light_handle.c  get_next_line.c  get_next_line_utils.c  listen.c  main.c  mem_utils.c  parse.c  parse_shapes.c  parse_utils.c  plane_utils.c  put_pixel.c  resize.c  rotate.c  select.c  sphere_utils.c  terminate.c  tracer.c  tracer_camera.c  tracer_utils.c  translate.c  vector_utils.c  x_window.c
srcs_bonus/: color_utils_bonus.c  cylinder_cap_utils_bonus.c  cylinder_utils_bonus.c  diffuse_light_check_bonus.c  diffuse_light_handle_bonus.c  get_next_line_bonus.c  get_next_line_utils_bonus.c  listen_bonus.c  main_bonus.c  mem_utils_bonus.c  parse_bonus.c  parse_shapes_bonus.c  parse_utils_bonus.c  plane_utils_bonus.c  put_pixel_bonus.c  resize_bonus.c  rotate_bonus.c  select_bonus.c  sphere_utils_bonus.c  terminate_bonus.c  tracer_bonus.c  tracer_camera_bonus.c  translate_bonus.c  vector_utils_bonus.c  x_window_bonus.c
